// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Communities community create 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "admins": Array [
    Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "community": "imnew",
      "communityId": "c00000000000000000000003",
      "createdAt": "[SANITIZED]",
      "degree": 0,
      "deletedCommunity": false,
      "embeddedUser": Object {
        "_id": "[SANITIZED]",
        "handle": "bob",
        "image": "https://yt3.ggpht.com/a/AGF-l7_IPKJORqk1Wo7AR4jMhW15Ma-za_QDlRxMcQ=s900-c-k-c0xffffffff-no-rj-mo",
        "name": "Bob",
      },
      "invites": 0,
      "pagerank": 0,
      "pagerankRaw": 0,
      "reputation": 0,
      "role": "admin",
      "superAdmin": true,
      "unread": 0,
      "updatedAt": "[SANITIZED]",
      "user": "b00000000000000000000000",
    },
  ],
  "avgTwitterScore": 0,
  "betEnabled": false,
  "channels": Array [],
  "createdAt": "[SANITIZED]",
  "currentPosts": 0,
  "currentShares": 0,
  "description": "Discussion of blockchain tech and ecosystem",
  "hidden": false,
  "id": "[SANITIZED]",
  "image": "",
  "lastRewardFundUpdate": "[SANITIZED]",
  "memberCount": 1,
  "name": "New Community",
  "postCount": 0,
  "private": false,
  "rewardFund": 0,
  "slug": "imnew",
  "topPostShares": 0,
  "topics": Array [
    "co community topic",
  ],
  "twitterCount": 0,
  "updatedAt": "[SANITIZED]",
}
`;

exports[`Communities community join 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "community": "imnew",
  "communityId": "c00000000000000000000003",
  "createdAt": "[SANITIZED]",
  "degree": 0,
  "deletedCommunity": false,
  "embeddedUser": Object {
    "_id": "[SANITIZED]",
    "handle": "carol",
    "image": "https://ichef.bbci.co.uk/news/640/cpsprodpb/A369/production/_87133814_87135704.jpg",
    "name": "Carol",
  },
  "invites": 0,
  "pagerank": 0,
  "pagerankRaw": 0,
  "reputation": 0,
  "role": "user",
  "superAdmin": false,
  "unread": 0,
  "updatedAt": "[SANITIZED]",
  "user": "c00000000000000000000000",
}
`;
